# hiroba

./: .gitignore  Makefile  PROTOCOL.md  README.ja.md  README.md  wrangler.toml
.github/workflows/: release-client.yml
client/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
client/src/: audio.ts  auth.ts  config.ts  deeplink.ts  i18n.ts  input.ts  loop.ts  main.ts  net.ts  protocol.ts  render.ts  select.ts  styles.css  ui.ts  updater.ts  vite-env.d.ts
client/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.dev.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  main.rs  oauth.rs
client/tests/: audio.test.mjs  auth.test.mjs  config.test.mjs  i18n.test.mjs  loop.test.mjs
common/: Cargo.toml
common/src/: lib.rs
docs/: SELF_HOSTING.md
functions/api/: waitlist.js
scripts/: build-site.mjs  download-manifest.mjs
server/: Cargo.toml
server/src/: auth.rs  billing.rs  ice.rs  main.rs  protocol.rs  proximity.rs  registry.rs  state.rs  store.rs  ws.rs
server/tests/: auth.mjs  smoke.mjs
site/: _headers  index.html  pricing.html
site/assets/: download.js  i18n.js  site.js  style.css  waitlist.js
