[package]
name = "hiroba-client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Hiroba desktop client"
repository = "https://github.com/hiroba/hiroba"

[lib]
name = "hiroba_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OAuth login (AUTH_PLAN §2): loopback listener + PKCE + /token exchange all
# live on the Rust side so the webview never sees the verifier.
tokio = { version = "1", features = ["net", "time", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
# System browser launcher — providers reject embedded-webview logins.
open = "5"
# OS keychain for the Hiroba session JWT (replaces plaintext localStorage).
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
# Auto-update: fetch latest.json from GitHub Releases, verify the minisign
# signature against the pubkey in tauri.conf.json, install, then relaunch
# (relaunch comes from the process plugin). Driven from updater.ts.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Invite deep links (hiroba://invite/<token>): registers the scheme and emits
# open-url events to the webview (deeplink.ts).
tauri-plugin-deep-link = "2"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
# A second launch (Windows/Linux hand a hiroba:// URL to a fresh process)
# forwards to the running instance; the deep-link feature re-emits its URL.
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
